<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_survey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.effectivenavigation.matching.SurveyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:text="Please answer the following questions:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <TextView
                android:text="@string/questionnaire1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp" />

            <SeekBar
                style="@android:style/Widget.DeviceDefault.SeekBar"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progress="0"
                android:id="@+id/seekBar2" />

            <TextView
                android:text="@string/questionnaire2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:id="@+id/textView" />

            <SeekBar
                style="@android:style/Widget.DeviceDefault.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progress="0"
                android:id="@+id/seekBar3" />

            <TextView
                android:text="@string/questionnaire3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                />

            <SeekBar
                style="@android:style/Widget.DeviceDefault.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progress="0"
                android:id="@+id/seekBar4" />

            <TextView
                android:text="@string/questionnaire4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                />

            <SeekBar
                style="@android:style/Widget.DeviceDefault.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progress="0"
                android:id="@+id/seekBar5" />

            <TextView
                android:text="@string/questionnaire5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                />

            <SeekBar
                style="@android:style/Widget.DeviceDefault.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progress="0"
                android:id="@+id/seekBar6" />

            <TextView
                android:text="@string/questionnaire6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                />

            <SeekBar
                style="@android:style/Widget.DeviceDefault.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progress="0"
                android:id="@+id/seekBar7" />

            <TextView
                android:text="@string/questionnaire7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                />

            <SeekBar
                style="@android:style/Widget.DeviceDefault.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:progress="0"
                android:id="@+id/seekBar8" />

            <Button
                android:text="Complete!"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/match_button" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
